adding other start up

--- a/bumisuplai.html
+++ b/bumisuplai.html
@@ -144,9 +144,9 @@
                       </div>
                     </div>
                   </div>
-                  <div class="read-more">
+                  <!-- <div class="read-more">
                     <a href="#" class="rq-btn rq-btn-primary border-radius">See Profile <i class="arrow_right"></i></a>
-                  </div>
+                  </div> -->
                 </div>
               </div> <!-- end user list -->
 
@@ -162,7 +162,7 @@
                 </p>
               </div>
               <div class="rq-user-about wow fadeIn" data-wow-delay=".2s">
-                <h3 class="rq-title-secondary">Tentang Bumi Suplai</h3>
+                <h3 class="rq-title-secondary">Potensi Pengembangan Usaha</h3>
                 <p class="about-text" style="text-align: justify;color: black;" >
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Pada 2017, jumlah coffee shop atau kedai kopi di Jogja dan sekitarnya telah mencapai angka 1.200 kedai. Kemudian setelah tahun 2017 jumlah coffee shop di Jogja dan sekitarnya cenderung mengalami peningkatan. Usaha coffee shop memang sempat meredup selama dua tahun terakhir karena pandemi. Namun sejak pandemi mulai mereda dan pembatasan sosial dilonggarkan, coffee shop kembali ramai pengunjung. Banyak bermunculan coffee shop baru menggantikan beberapa yang tutup saat pandemi. Diperkirakan beberapa bulan ke depan pengunjung coffee shop semakin ramai seiring dengan bertambahnya pendatang yang sebagian besar adalah pelajar dan mahasiswa.
                     <br>
