--- a/cangkirbumi.html
+++ b/cangkirbumi.html
@@ -144,9 +144,9 @@
                       </div>
                     </div>
                   </div>
-                  <div class="read-more">
+                  <!-- <div class="read-more">
                     <a href="#" class="rq-btn rq-btn-primary border-radius">See Profile <i class="arrow_right"></i></a>
-                  </div>
+                  </div> -->
                 </div>
               </div> <!-- end user list -->
 
@@ -154,25 +154,48 @@
               <div class="rq-user-about wow fadeIn" data-wow-delay=".2s">
                 <h3 class="rq-title-secondary">Tentang Cangkir Bumi</h3>
                 <p class="about-text" style="text-align: justify;color: black;" >
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Cangkir Bumi adalah distributor sirup dan powder drink (bubuk minuman) yang bekerjasama langsung dengan produsen merek terkenal. Kantor dan gudang Cangkir Bumi terletak di Jl. Jogokariyan 12D, Yogyakarta. Sejak tahun 2021, Cangkir Bumi memasok sirup dan powder drink ke beberapa coffee shop di Jogja. 
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Cangkir bumi merupakan sebuah kedai kopi (kafe) yang didirikan pada tanggal 28 Februari 2021, berlokasi di tengah kota Jogja, tepatnya di Jl. Prof. Dr. Soepomo SH, Warungboto, Umbulharjo, Yogyakarta. Luas kafe ini + 1.100 m2 yang terbagi menjadi tiga bagian utama yakni: area produksi + 60 m2, area tongkrongan + 500 m2 (80% terbuka dengan atap dan 20% terbuka tanpa atap), dan area parkiran + 550 m2 (muat untuk 180 unit motor dan 10 unit Mobil). Di kafe ini juga tersedia kamar kecil dan mushalla serta fasilitas free Wi-fi. 
                     <br>
-                    Saat ini terdapat sekitar 40 coffee shop di Jogja yang berlangganan produk dari Cangkir Bumi. Cangkir Bumi juga memiliki beberapa reseller di luar kota seperti Solo dan Probolinggo. Para reseller tersebut merupakan pemasok dari beberapa coffee shop di masing-masing kota.  
+                    Cangkir bumi mengusung konsep semi tradisional. Bangunan utama kafe ini adalah joglo jawa kuno yang berukuran 16 m x 12 m, dibangun dengan pondasi dan tiangnya berbasis beton yang sangat kokoh, dan keseluruhan rangka atasnya berbasis bahan kayu yang sangat kuat. Kursi yang disediakan bervariasi yakni; sekitar 20% sofa, semi sofa 15% dan kursi kayu 65%. Secara keseluruhan dapat menampung kurang lebih 180 seat. Di setiap meja tersedia stop kontak untuk mendukung aktivitas customer yang memerlukan colokan listrik saat nongkrong maupun mengerjakan tugas.  
                     <br>
-                    Meskipun baru beroperasi sekitar satu tahun, namun para pengelola Cangkir Bumi telah memiliki pengalaman di bidang distribusi sirup dan powder drink selama lebih dari tiga tahun. Sebelumnya mereka telah memiliki jejaring mulai dari coffee shop, reseller, hingga distributor lokal di Jogja dan beberapa kota lain di Pulau Jawa. Sehingga Cangkir Bumi memiliki jejaring usaha yang cukup luas dan sangat besar potensinya untuk dikembangkan. 
+                    <br>
+                    Menu yang ditawakan di Cangkir Bumi sangat beragam dengan mangandalkan kopi sebagai menu utama baik diseduh secara manual maupun espresso base. Meski demikian fokus penjualan tidak hanya pada kopi saja, tetapi juga menjual minuman aneka jus buah dan minuman yang berbahan bubuk seperti matcha, coklat, red velvet, dll. tersedia juga minuman tradisional seperti wadang susu jahe, wadang uwuh, dll. Untuk menu snack tersedia cireng, pisang goreng, kentang goreng, singkong goreng dll, sedangkan untuk menu makanan beratnya antara lain; nasi ayam sambal matah, nasi telor, indomie, dll. harga menu di cangkir bumi relatif murah mulai dari harga Rp5.000 sampai dengan Rp25.000.
+                    <br>
+                    Konsumen Cangkir Bumi cukup beragam, paling banyak adalah mahasiswa dari kampus yang berbeda-beda di Yogyakarta. Selain untuk nongkrong dan menikmati kopi, mahasiswa  yang datang ke Cangkir Bumi juga banyak yang mengejarkan tugas, diskusi kelompok, dan rapat komunitas. 
                 </p>
               </div>
               <div class="rq-user-about wow fadeIn" data-wow-delay=".2s">
-                <h3 class="rq-title-secondary">Tentang Cangkir Bumi</h3>
-                <p class="about-text" style="text-align: justify;color: black;" >
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Pada 2017, jumlah coffee shop atau kedai kopi di Jogja dan sekitarnya telah mencapai angka 1.200 kedai. Kemudian setelah tahun 2017 jumlah coffee shop di Jogja dan sekitarnya cenderung mengalami peningkatan. Usaha coffee shop memang sempat meredup selama dua tahun terakhir karena pandemi. Namun sejak pandemi mulai mereda dan pembatasan sosial dilonggarkan, coffee shop kembali ramai pengunjung. Banyak bermunculan coffee shop baru menggantikan beberapa yang tutup saat pandemi. Diperkirakan beberapa bulan ke depan pengunjung coffee shop semakin ramai seiring dengan bertambahnya pendatang yang sebagian besar adalah pelajar dan mahasiswa.
-                    <br>
-                    Semakin ramainya coffee shop berdampak pada peningkatan permintaan terhadap produk sirup dan powder drink sebagai bahan campuran minuman kekinian. Kunjungan coffee shop yang semakin ramai membuat permintaan terhadap produk Cangkir Bumi semakin meningkat. Cangkir Bumi juga sudah mulai dikenal di kalangan pengusaha coffee shop di Jogja dan sekitarnya.   
-                    <br>
-                    Potensi pasar Cangkir Bumi masih cukup luas karena ada lebih dari 1.000 coffee shop di Jogja dan sekitarnya. Tidak hanya coffee shop atau kedai kopi saja yang menggunakan sirup dan bubuk minuman ini. Kafe, restoran, dan outlet minuman juga membutuhkan produk tersebut sebagai bahan untuk membuat minuman kekinian yang banyak diminati.
-
-                    Produk berkualitas dengan harga kompetitif adalah keunggulan yang dimiliki Cangkir Bumi. Sebagai mitra kerjasama spesial dari Denali dan Trieste, Cangkir Bumi memperoleh harga beli khusus. 
-
+                <h2 class="rq-title-secondary">Visi</h2>
+                <p class="about-text" style="color: black ;">
+                  Menjadi kedai kopi yang berorientasi pada pelanggan bersama seduhan citarasa bahan terbaik, pelayanan humanis yang mengedepankan keterjangkauan harga, kenyamanan, bertanggung jawab secara sosial dan lingkungan, serta membangun persekawanan bagi semua kalangan<br>
                 </p>
+                <h2 class="rq-title-secondary">Misi</h2>
+                <p class="about-text" style="color: black ;">
+                  Memelihara inspirasi keharmonian manusia bersama semesta dalam secangkir kopi yang membumi.
+                </p>
+                <h2 class="rq-title-secondary">Nilai-Nilai</h2>  
+                <p class="about-text">
+                  <ol style="color: black;">
+                    <li>Membangun kebersamaan dan kehangatan dengan berbagai kalangan bersama rasa hormat yang tinggi dan membumi.</li>
+                    <li>Konsisten menawarkan kopi terbaik dengan selalu mepertahankan seduhan tradisonal dan berkembang dengan metode seduhan mesin.</li>
+                    <li>Memperhatikan pelanggan dengan mengedepankan pelayanan terbaik, harga yang terjangkau dan menumbuhkan budaya rasa memiliki.</li>
+                    <li>Bertindak menjalankan usaha secara transparan, bertanggung jawab, dan bermanfaat bagi sosial dan lingkungan.</li>
+                    <li>Tumbuh bersama kinerja yang manusiawi dan penuh kekeluargaan.</li>
+                  </ol>
+                </p>
+              
+                
+                <h2 class="rq-title-secondary">Historis</h2>
+                <p class="about-text" style="color: black ;">
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Cangkir Bumi di didirikan pada saat memasuki tahun pertama pandemi covid-19, di tengah situasi pemberlakuan protokol kesehatan yang masih ketat, seperti jaga jarak dan pembatasan jam malam. <br>
+                <br>
+                Keputusan mendirikan kafe Cangkir Bumi merupakan keputusan yang sulit dan cendrung nekat. Sebab pada saat itu jogja dalam kondisi sangat sepi mahasiswa. Mahasiswa banyak yang memilih tinggal dikampung halaman karena semua kampus menerapakan pembelajaran daring. Akibatnya hampir semua usaha yang mengandalkan dine in di Jogja mengalami dampak penurunan omzet yang sangat drastis. Namun situasi yang sulit tersebut tidak menadi kendala bagi owner Cangkir Bumi untuk tetap mendirikan kafe Cangkir Bumi. Alasan besarnya karena tabungan uang owner Cangkir Bumi sudah sangat menipis, sehingga kalau tidak dipaksa untuk memodali usaha maka akan habis begitu saja, meskipun juga ada potensi risiko kerugian yang besar bila terjadi kegagalan di Cangkir Bumi.
+                <br>
+                <br>
+                Pada awal tahun 2021 tepat bulan januari, tahap pembangunan Cangkir Bumi dimulai. Selama tahap pembangunan, beberapa rekan membantu persiapan menu yang akan dijual. Kemudian tepat pada tanggal 28 Februari 2021 Cangkir Bumi resmi dibuka untuk pelanggan umum. Dan ternyata, antusiame konsumen cukup tinggi. Awalnya karyawan hanya 3 orang saja tetapi secara bertahap bertambah terus hingga jadi 10 karyawan. Jumlah kursi juga terus mengalami peningkatan, dari yang awalnya hanya mampu menampung 90 pengujung, bertambah 100% jadi mampu menampung 180 pengunjung. Selain itu, menu-menu yang tersedia juga mengalami perkembangan baik dari segi kualitas maupun kuantitas.
+                <br>
+                </p>
+              </div>
               <div class="rq-user-assigned-listing">
                 <h3 class="rq-title-secondary">Other Start-Up</h3>
                 <div class="rq-category-result" id="rq-category-result">
