--- a/index.html
+++ b/index.html
@@ -145,7 +145,11 @@
                     <img class="img-circle" width="20%" height="490" src="assets/dist/img/logo/5.png" sizes="(max-width: 234px) 200vw, 500px" style="width:50%;height:50%;max-width:250px;">
                     
                     <h5><br>Bumi Suplai</h5>
-                    <p>Over 30,000 properties</p>
+                    <div class="read-more">
+                      <h5><br></h5>
+                      <a href="bumisuplai.html" class="rq-btn rq-btn-primary" style="border-radius: 10px ; ">See Profile<i class="arrow_right"></i></a>
+                    <h2><br></h2>
+                    </div>
                   </div>
                 </div>
                 <div class="col-md-3 col-sm-3">
@@ -154,14 +158,22 @@
                       <img class="img-circle" width="20%" height="490" src="assets/dist/img/logo/cangkirbg.png" sizes="(max-width: 234px) 200vw, 500px" style="width:50%;height:50%;max-width:250px;">
                     
                     <h5><br>Cangkir Bumi</h5>
-                    <p>Over 12,000 agents</p>
+                    <div class="read-more">
+                      <h5><br></h5>
+                      <a href="cangkirbumi.html" class="rq-btn rq-btn-primary" style="border-radius: 10px ; ">See Profile<i class="arrow_right"></i></a>
+                    <h2><br></h2>
+                    </div>
                   </div>
                 </div>
                 <div class="col-md-3 col-sm-3">
                   <div class="rq-icon-box-single">
                       <img class="img-circle" width="20%" height="490" src="assets/dist/img/logo/22.png" sizes="(max-width: 234px) 200vw, 500px" style="width:50%;height:50%;max-width:250px;">
                     <h5><br>Tentrem Bumi</h5>
-                    <p>Make a good price</p>
+                    <div class="read-more">
+                      <h5><br></h5>
+                      <a href="tentrembumi.html" class="rq-btn rq-btn-primary" style="border-radius: 10px ; ">See Profile<i class="arrow_right"></i></a>
+                    <h2><br></h2>
+                    </div>
                   </div>
                 </div>
                 <div class="col-md-3 col-sm-3">
@@ -724,7 +736,7 @@
       <div class="rq-copyright-section">
         <div class="container">
           <div class="copyright-content">
-            <p>Copyrights © 2022 Cangkir Bumis with theme by <a href="#">SCHOLAR.</a> All Rights Reserved. Develop by Ari Dimas</p>
+            <p>Copyrights © 2022 Bumi Seduh with theme by <a href="#">SCHOLAR.</a> All Rights Reserved. Develop by Ari Dimas</p>
             <ul class="list-unstyled social-list">
               <li><a href="#">Home</a></li>
               <li><a href="#">Properties</a></li>
