adding other start up

--- a/cangkirbumi.html
+++ b/cangkirbumi.html
@@ -119,7 +119,7 @@
                   <div class="rq-user-pro-head">
                     <div class="rq-user-name">
                       <h3>Cangkir Bumi<small></small></h3>
-                      <p>Supplier</p>
+                      <p>Cafe</p>
                     </div>
                     <div class="social-login"> <!-- start social icon div -->
                       <ul class="social-page-nav">
