--- a/tentrembumi.html
+++ b/tentrembumi.html
@@ -119,7 +119,7 @@
                   <div class="rq-user-pro-head">
                     <div class="rq-user-name">
                       <h3>Tentrem Bumi<small></small></h3>
-                      <p>Supplier</p>
+                      <p>Cafe</p>
                     </div>
                     <div class="social-login"> <!-- start social icon div -->
                       <ul class="social-page-nav">
@@ -151,24 +151,13 @@
               <div class="rq-user-about wow fadeIn" data-wow-delay=".2s">
                 <h3 class="rq-title-secondary">Tentang Tentrem Bumi</h3>
                 <p class="about-text" style="text-align: justify;color: black;" >
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Bumi Suplai adalah distributor sirup dan powder drink (bubuk minuman) yang bekerjasama langsung dengan produsen merek terkenal. Kantor dan gudang Bumi Suplai terletak di Jl. Jogokariyan 12D, Yogyakarta. Sejak tahun 2021, Bumi Suplai memasok sirup dan powder drink ke beberapa coffee shop di Jogja. 
-                    <br>
-                    Saat ini terdapat sekitar 40 coffee shop di Jogja yang berlangganan produk dari Bumi Suplai. Bumi Suplai juga memiliki beberapa reseller di luar kota seperti Solo dan Probolinggo. Para reseller tersebut merupakan pemasok dari beberapa coffee shop di masing-masing kota.  
-                    <br>
-                    Meskipun baru beroperasi sekitar satu tahun, namun para pengelola Bumi Suplai telah memiliki pengalaman di bidang distribusi sirup dan powder drink selama lebih dari tiga tahun. Sebelumnya mereka telah memiliki jejaring mulai dari coffee shop, reseller, hingga distributor lokal di Jogja dan beberapa kota lain di Pulau Jawa. Sehingga Bumi Suplai memiliki jejaring usaha yang cukup luas dan sangat besar potensinya untuk dikembangkan. 
-                </p>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - 
+                  </p>
               </div>
               <div class="rq-user-about wow fadeIn" data-wow-delay=".2s">
                 <h3 class="rq-title-secondary">Tentang Tentrem Bumi</h3>
                 <p class="about-text" style="text-align: justify;color: black;" >
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Pada 2017, jumlah coffee shop atau kedai kopi di Jogja dan sekitarnya telah mencapai angka 1.200 kedai. Kemudian setelah tahun 2017 jumlah coffee shop di Jogja dan sekitarnya cenderung mengalami peningkatan. Usaha coffee shop memang sempat meredup selama dua tahun terakhir karena pandemi. Namun sejak pandemi mulai mereda dan pembatasan sosial dilonggarkan, coffee shop kembali ramai pengunjung. Banyak bermunculan coffee shop baru menggantikan beberapa yang tutup saat pandemi. Diperkirakan beberapa bulan ke depan pengunjung coffee shop semakin ramai seiring dengan bertambahnya pendatang yang sebagian besar adalah pelajar dan mahasiswa.
-                    <br>
-                    Semakin ramainya coffee shop berdampak pada peningkatan permintaan terhadap produk sirup dan powder drink sebagai bahan campuran minuman kekinian. Kunjungan coffee shop yang semakin ramai membuat permintaan terhadap produk Bumi Suplai semakin meningkat. Bumi Suplai juga sudah mulai dikenal di kalangan pengusaha coffee shop di Jogja dan sekitarnya.   
-                    <br>
-                    Potensi pasar Bumi Suplai masih cukup luas karena ada lebih dari 1.000 coffee shop di Jogja dan sekitarnya. Tidak hanya coffee shop atau kedai kopi saja yang menggunakan sirup dan bubuk minuman ini. Kafe, restoran, dan outlet minuman juga membutuhkan produk tersebut sebagai bahan untuk membuat minuman kekinian yang banyak diminati.
-
-                    Produk berkualitas dengan harga kompetitif adalah keunggulan yang dimiliki Bumi Suplai. Sebagai mitra kerjasama spesial dari Denali dan Trieste, Bumi Suplai memperoleh harga beli khusus. 
-
+                    -
                 </p>
               <div class="rq-user-assigned-listing">
                 <h3 class="rq-title-secondary">Other Start-Up</h3>
