adding few page, changing header, and adding a few change

--- a/bumiseduh.html
+++ b/bumiseduh.html
@@ -24,7 +24,7 @@
       <header class="header">
         <div class="headroom-sticky sticky-scroll">
           <nav class="navbar navbar-default">
-            <div class="container">
+            <div class="container-fluid">
               <!-- Brand and toggle get grouped for better mobile display -->
               <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
@@ -34,7 +34,7 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"><img src="assets/dist/img/real-estate/doctor-logo-light.png" alt=""/></a>
+                <a class="navbar-brand" href="index.html"><img src="assets/dist/img/logo/1_1.png" alt=""/></a>
               </div>
 
               <!-- Collect the nav links, forms, and other content for toggling -->
@@ -43,18 +43,15 @@
                   <li class=""><a href="index.html" >Home</a></li>
                   <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                      aria-haspopup="true" aria-expanded="false">Listing <span class="ion-chevron-down"></span></a>
+                      aria-haspopup="true" aria-expanded="false">Start-Up <span class="ion-chevron-down"></span></a>
                     <ul class="dropdown-menu">
-                      <li><a href="listing-plain-heading.html">Listing Plain Heading</a></li>
-                      <li><a href="listing-map.html">Listing Map</a></li>
-                      <li><a href="listing-slider.html">Listing Revolution Slider</a></li>
-                      <li><a href="listing-banner.html">Listing Banner</a></li>
-                      <li><a href="listing-adsense.html">Listing Adsense</a></li>
-                      <li><a href="listing-detail.html">Listing Details</a></li>
+                      <li><a href="tentrembumi.html">Tentrem Bumi</a></li>
+                      <li><a href="cangkirbumi.html">Cangkir Bumi</a></li>
+                      <li><a href="bumisuplai.html">Bumi Suplai</a></li>
                     </ul>
                   </li>
                   <li class=""><a href="lokasi.html" >Lokasi</a></li>
-                  <li class="dropdown  ">
+                  <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
                       aria-haspopup="true" aria-expanded="false">Blog <span class="ion-chevron-down"></span></a>
                     <ul class="dropdown-menu">
@@ -68,17 +65,7 @@
                       <li><a href="post-audio-single.html">Single audio Post</a></li>
                     </ul>
                   </li>
-                  <li class="dropdown active">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                      aria-haspopup="true" aria-expanded="false">Agents <span class="ion-chevron-down"></span></a>
-                    <ul class="dropdown-menu">
-                      <li><a href="users.html">Users</a></li>
-                      <li><a href="user-profile.html">User Profile</a></li>
-                      <li><a href="agencies.html">Agencies</a></li>
-                      <li><a href="bumiseduh.html">Bumi Seduh</a></li>
-                      <li><a href="registration.html">Registration</a></li>
-                    </ul>
-                  </li>
+                  <li class=""><a href="bumiseduh.html" >Profil</a></li>
 
                   <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
@@ -110,14 +97,13 @@
               <h2 class="rq-title">Tentang</h2>
               <ol class="breadcrumb rq-subtitle">
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Agents</a></li>
                 <li class="active">Tentang</li>
               </ol>
             </div> <!-- end of breadcrumb -->
             <div class="rq-user-profile-page">  
               <div class="rq-user-listing-single wow fadeIn" data-wow-delay=".1s"> <!-- start company user list -->
                 <div class="rq-user-profile-pic agency-logo">
-                  <img src="assets/dist/img/real-estate/company-user/agencies1.png" alt="">
+                  <img src="assets/dist/img/logo/11.png" alt="">
                 </div>
                 <div class="rq-user-profile-details">
                   <div class="rq-user-pro-head">
