--- a/bumisuplai.html
+++ b/bumisuplai.html
@@ -24,7 +24,7 @@
       <header class="header">
         <div class="headroom-sticky sticky-scroll">
           <nav class="navbar navbar-default">
-            <div class="container">
+            <div class="container-fluid">
               <!-- Brand and toggle get grouped for better mobile display -->
               <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
@@ -50,7 +50,7 @@
                       <li><a href="bumisuplai.html">Bumi Suplai</a></li>
                     </ul>
                   </li>
-                  <li class=""><a href="category.html" >Lokasi</a></li>
+                  <li class=""><a href="lokasi.html" >Lokasi</a></li>
                   <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
                       aria-haspopup="true" aria-expanded="false">Blog <span class="ion-chevron-down"></span></a>
@@ -65,17 +65,7 @@
                       <li><a href="post-audio-single.html">Single audio Post</a></li>
                     </ul>
                   </li>
-                  <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                      aria-haspopup="true" aria-expanded="false">Profil <span class="ion-chevron-down"></span></a>
-                    <ul class="dropdown-menu">
-                      <li><a href="users.html">Users</a></li>
-                      <li><a href="user-profile.html">User Profile</a></li>
-                      <li><a href="agencies.html">Agencies</a></li>
-                      <li><a href="bumiseduh.html">Bumi Seduh</a></li>
-                      <li><a href="registration.html">Registration</a></li>
-                    </ul>
-                  </li>
+                  <li class=""><a href="bumiseduh.html" >Profil</a></li>
 
                   <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
