--- a/index.html
+++ b/index.html
@@ -46,59 +46,33 @@
               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                   <li class="active"><a href="index.html" >Home</a></li>
-                  <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                      aria-haspopup="true" aria-expanded="false">Start-Up <span class="ion-chevron-down"></span></a>
-                    <ul class="dropdown-menu">
-                      <li><a href="tentrembumi.html">Tentrem Bumi</a></li>
-                      <li><a href="cangkirbumi.html">Cangkir Bumi</a></li>
-                      <li><a href="bumisuplai.html">Bumi Suplai</a></li>
-                    </ul>
-                  </li>
-                  <li class=""><a href="lokasi.html" >Lokasi</a></li>
-                  <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                      aria-haspopup="true" aria-expanded="false">Blog <span class="ion-chevron-down"></span></a>
-                    <ul class="dropdown-menu">
-                      <li><a href="blog-grid.html">Blog Grid</a></li>
-                      <li><a href="blog-list-thumb.html">Blog List Thumb</a></li>
-                      <li><a href="blog-listing.html">Blog Listing</a></li>
-                      <li><a href="blog-masonary.html">Blog Masonary</a></li>
-                      <li><a href="post-image-single.html">Single Image Post</a></li>
-                      <li><a href="post-gallery-single.html">Single Gallery Post</a></li>
-                      <li><a href="post-video-single.html">Single Video Post</a></li>
-                      <li><a href="post-audio-single.html">Single audio Post</a></li>
-                    </ul>
-                  </li>
-                  <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                      aria-haspopup="true" aria-expanded="false">Profil <span class="ion-chevron-down"></span></a>
-                    <ul class="dropdown-menu">
-                      <li><a href="users.html">Users</a></li>
-                      <li><a href="user-profile.html">User Profile</a></li>
-                      <li><a href="agencies.html">Agencies</a></li>
-                      <li><a href="bumiseduh.html">Bumi Seduh</a></li>
-                      <li><a href="registration.html">Registration</a></li>
-                    </ul>
-                  </li>
-
-                  <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                      aria-haspopup="true" aria-expanded="false">Page <span class="ion-chevron-down"></span></a>
-                    <ul class="dropdown-menu">
-                      <li><a href="contact-us.html">Contact Us</a></li>
-                      <li><a href="pricing-plan.html">Plan &amp; Pricing</a></li>
-                      <li><a href="coming-soon.html">Coming Soon </a></li>
-                      <li><a href="page-404.html">404 page</a></li>
-                      <li><a href="media-elements.html">Media elements</a></li>
-                      <li><a href="typography.html">Typography</a></li>
-                      <li><a href="elements.html">Common elements</a></li>
-                    </ul>
-                  </li>
-                  <li class="login-register-link"><a href="registration.html">
-                      <i class="icon_lock-open_alt"></i>Login or Register</a>
-                  </li>
-                </ul>
+                    <li class="dropdown">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                        aria-haspopup="true" aria-expanded="false">Start-Up <span class="ion-chevron-down"></span></a>
+                      <ul class="dropdown-menu">
+                        <li><a href="tentrembumi.html">Tentrem Bumi</a></li>
+                        <li><a href="cangkirbumi.html">Cangkir Bumi</a></li>
+                        <li><a href="bumisuplai.html">Bumi Suplai</a></li>
+                      </ul>
+                    </li>
+                    <li class=""><a href="lokasi.html" >Lokasi</a></li>
+                    </li>
+                    <li><a href="bumiseduh.html">Profil</a>
+                    </li>
+                    <li class="dropdown">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                        aria-haspopup="true" aria-expanded="false">Blog <span class="ion-chevron-down"></span></a>
+                      <ul class="dropdown-menu">
+                        <li><a href="blog-grid.html">Blog Grid</a></li>
+                        <li><a href="blog-list-thumb.html">Blog List Thumb</a></li>
+                        <li><a href="blog-listing.html">Blog Listing</a></li>
+                        <li><a href="blog-masonary.html">Blog Masonary</a></li>
+                        <li><a href="post-image-single.html">Single Image Post</a></li>
+                        <li><a href="post-gallery-single.html">Single Gallery Post</a></li>
+                        <li><a href="post-video-single.html">Single Video Post</a></li>
+                        <li><a href="post-audio-single.html">Single audio Post</a></li>
+                      </ul>
+                  </ul>
               </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
           </nav>
