--- a/lokasi.html
+++ b/lokasi.html
@@ -47,7 +47,7 @@
                       <li><a href="bumisuplai.html">Bumi Suplai</a></li>
                     </ul>
                   </li>
-                  <li class=""><a href="category.html" >Lokasi</a></li>
+                  <li class=""><a href="lokasi.html" >Lokasi</a></li>
                   <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
                       aria-haspopup="true" aria-expanded="false">Blog <span class="ion-chevron-down"></span></a>
@@ -62,17 +62,7 @@
                       <li><a href="post-audio-single.html">Single audio Post</a></li>
                     </ul>
                   </li>
-                  <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                      aria-haspopup="true" aria-expanded="false">Profil <span class="ion-chevron-down"></span></a>
-                    <ul class="dropdown-menu">
-                      <li><a href="users.html">Users</a></li>
-                      <li><a href="user-profile.html">User Profile</a></li>
-                      <li><a href="agencies.html">Agencies</a></li>
-                      <li><a href="bumiseduh.html">Bumi Seduh</a></li>
-                      <li><a href="registration.html">Registration</a></li>
-                    </ul>
-                  </li>
+                  <li class=""><a href="bumiseduh.html" >Profil</a></li>
 
                   <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
