change maps location

--- a/lokasi.html
+++ b/lokasi.html
@@ -37,50 +37,34 @@
               <!-- Collect the nav links, forms, and other content for toggling -->
               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                  <li class=""><a href="index.html" >Home</a></li>
-                  <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                      aria-haspopup="true" aria-expanded="false">Start-Up <span class="ion-chevron-down"></span></a>
-                    <ul class="dropdown-menu">
-                      <li><a href="tentrembumi.html">Tentrem Bumi</a></li>
-                      <li><a href="cangkirbumi.html">Cangkir Bumi</a></li>
-                      <li><a href="bumisuplai.html">Bumi Suplai</a></li>
-                    </ul>
-                  </li>
-                  <li class=""><a href="lokasi.html" >Lokasi</a></li>
-                  <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                      aria-haspopup="true" aria-expanded="false">Blog <span class="ion-chevron-down"></span></a>
-                    <ul class="dropdown-menu">
-                      <li><a href="blog-grid.html">Blog Grid</a></li>
-                      <li><a href="blog-list-thumb.html">Blog List Thumb</a></li>
-                      <li><a href="blog-listing.html">Blog Listing</a></li>
-                      <li><a href="blog-masonary.html">Blog Masonary</a></li>
-                      <li><a href="post-image-single.html">Single Image Post</a></li>
-                      <li><a href="post-gallery-single.html">Single Gallery Post</a></li>
-                      <li><a href="post-video-single.html">Single Video Post</a></li>
-                      <li><a href="post-audio-single.html">Single audio Post</a></li>
-                    </ul>
-                  </li>
-                  <li class=""><a href="bumiseduh.html" >Profil</a></li>
-
-                  <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                      aria-haspopup="true" aria-expanded="false">Page <span class="ion-chevron-down"></span></a>
-                    <ul class="dropdown-menu">
-                      <li><a href="contact-us.html">Contact Us</a></li>
-                      <li><a href="pricing-plan.html">Plan &amp; Pricing</a></li>
-                      <li><a href="coming-soon.html">Coming Soon </a></li>
-                      <li><a href="page-404.html">404 page</a></li>
-                      <li><a href="media-elements.html">Media elements</a></li>
-                      <li><a href="typography.html">Typography</a></li>
-                      <li><a href="elements.html">Common elements</a></li>
-                    </ul>
-                  </li>
-                  <li class="login-register-link"><a href="registration.html">
-                      <i class="icon_lock-open_alt"></i>Login or Register</a>
-                  </li>
-                </ul>
+                  <li class="active"><a href="index.html" >Home</a></li>
+                    <li class="dropdown">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                        aria-haspopup="true" aria-expanded="false">Start-Up <span class="ion-chevron-down"></span></a>
+                      <ul class="dropdown-menu">
+                        <li><a href="tentrembumi.html">Tentrem Bumi</a></li>
+                        <li><a href="cangkirbumi.html">Cangkir Bumi</a></li>
+                        <li><a href="bumisuplai.html">Bumi Suplai</a></li>
+                      </ul>
+                    </li>
+                    <li class=""><a href="lokasi.html" >Lokasi</a></li>
+                    </li>
+                    <li><a href="bumiseduh.html">Profil</a>
+                    </li>
+                    <li class="dropdown">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                        aria-haspopup="true" aria-expanded="false">Blog <span class="ion-chevron-down"></span></a>
+                      <ul class="dropdown-menu">
+                        <li><a href="blog-grid.html">Blog Grid</a></li>
+                        <li><a href="blog-list-thumb.html">Blog List Thumb</a></li>
+                        <li><a href="blog-listing.html">Blog Listing</a></li>
+                        <li><a href="blog-masonary.html">Blog Masonary</a></li>
+                        <li><a href="post-image-single.html">Single Image Post</a></li>
+                        <li><a href="post-gallery-single.html">Single Gallery Post</a></li>
+                        <li><a href="post-video-single.html">Single Video Post</a></li>
+                        <li><a href="post-audio-single.html">Single audio Post</a></li>
+                      </ul>
+                  </ul>
               </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
           </nav>
@@ -92,7 +76,7 @@
           <div class="rq-category-container">
             <div class="row">
               <div class="col-md-8 col-md-push-4 rq-category-map-contains">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3952.7929263527312!2d110.38772321422047!3d-7.811732094370798!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a575589eeea0b%3A0x738db77891e97981!2sCangkir%20Bumi%20Coffee!5e0!3m2!1sid!2sid!4v1655458017234!5m2!1sid!2sid" width="880px" height="600px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3952.7929263527312!2d110.38772321422047!3d-7.811732094370798!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a575589eeea0b%3A0x738db77891e97981!2sCangkir%20Bumi%20Coffee!5e0!3m2!1sid!2sid!4v1655458017234!5m2!1sid!2sid" width="895vw" height="570vw" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div>
               <div class="col-md-4 rq-category-sidebar-bg">
                 <div class="rq-category-sidebar">
@@ -139,7 +123,7 @@
                         </div>
                       </a>
 
-                      <a href="listing-detail.html" class="wow fadeIn" >
+                      <!-- <a href="listing-detail.html" class="wow fadeIn" >
                         <div class="rq-category-result-single">
                           <div class="rq-result-img">
                             <img src="assets/dist/img/real-estate/listing-category/listing-4.png" alt=""/>
@@ -163,10 +147,7 @@
                             <h3><span class="new-price">$950,00</span></h3>
                           </div>
                         </div>
-                      </a>
-                    </div>
-                    <div class="rq-center-text rq-category-load-more wow fadeIn">
-                      <a href="#">Load more listing</a>
+                      </a> -->
                     </div>
                   </div>
 
