--- a/lokasi.html
+++ b/lokasi.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Category</title>
+    <title>Lokasi</title>
     <!-- Main style -->
+    <link rel="shortcut icon" href="./assets/dist/img/logo/11.png" type="image/x-icon">
     <link rel="stylesheet" href="assets/dist/css/real-estate.style.css">
+    
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
